[gd_scene load_steps=8 format=3 uid="uid://bcpwqxjp3guwp"]

[ext_resource type="Script" path="res://Scripts/MainsST/main_multiplayer.gd" id="1_0j7d2"]
[ext_resource type="Script" path="res://Scripts/MainsST/menues.gd" id="2_ldxva"]
[ext_resource type="Texture2D" uid="uid://c3udjvl1bslrv" path="res://resource/TileMaps/sprite_tileset_piedra.png" id="3_6n115"]
[ext_resource type="Script" path="res://scenes/menues/tile_map_layer.gd" id="4_f7e7l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1k1n"]
size = Vector2(1185, 20)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ct70"]
texture = ExtResource("3_6n115")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 4.90909, -18, 4.90909)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 4.90909, -18, 4.90909)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 4.90909, -18, 4.90909)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 4.90909, -18, 4.90909)
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
19:22/0 = 0
20:22/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0

[sub_resource type="TileSet" id="TileSet_talil"]
tile_size = Vector2i(36, 36)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8ct70")

[node name="main_scene" type="Node"]
script = ExtResource("1_0j7d2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera_pj1" type="Camera2D" parent="SubViewportContainer/SubViewport"]
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 577.0
offset_top = 1.0
offset_right = 577.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera_pj2" type="Camera2D" parent="SubViewportContainer2/SubViewport"]
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="Menues" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
offset_bottom = -408.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ldxva")

[node name="Menu_Principal" type="Control" parent="Menues"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Menues/Menu_Principal"]
layout_mode = 1
anchors_preset = -1
offset_top = 65.0
offset_right = 1893.0
offset_bottom = 756.0
scale = Vector2(0.608639, 0.608639)

[node name="VBoxContainer" type="VBoxContainer" parent="Menues/Menu_Principal/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 43
alignment = 1

[node name="MultijugadorTitle" type="Label" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Wasteland"
horizontal_alignment = 1
vertical_alignment = 1

[node name="textMap" type="Label" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "192.168.0.0"
horizontal_alignment = 1

[node name="host" type="Button" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Jugar"
flat = true

[node name="Multijugador" type="Button" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Multijugador"
flat = true

[node name="Settings" type="Button" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Ajustes"
flat = true

[node name="Salir" type="Button" parent="Menues/Menu_Principal/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Salir"
flat = true

[node name="Multijugador" type="Control" parent="Menues"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="back" type="Button" parent="Menues/Multijugador"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 168.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Atras"
flat = true

[node name="Mensaje" type="Label" parent="Menues/Multijugador"]
layout_mode = 2
offset_left = 10.0
offset_top = 4.0
offset_right = 996.0
offset_bottom = 281.0
scale = Vector2(0.46, 0.46)
theme_override_font_sizes/font_size = 100
text = "Unirse a una Partida
por IP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Menues/Multijugador"]
layout_mode = 1
anchors_preset = -1
offset_left = 641.0
offset_top = 1.0
offset_right = 1481.0
offset_bottom = 1064.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.608639, 0.608639)

[node name="VBoxContainer" type="VBoxContainer" parent="Menues/Multijugador/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 43
alignment = 1

[node name="IP" type="Label" parent="Menues/Multijugador/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "192.168.0.0"
horizontal_alignment = 1

[node name="join2" type="Button" parent="Menues/Multijugador/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Multijugador"

[node name="IP_Edit" type="LineEdit" parent="Menues/Multijugador/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "IP"
alignment = 1

[node name="Backgroung" type="CanvasLayer" parent="Menues"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Menues/Backgroung"]
offset_left = -547.0
offset_top = -122.0
offset_right = 2025.0
offset_bottom = 800.0
color = Color(0.143494, 0, 0.00452579, 1)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/characters/players/pj.tscn", "res://scenes/characters/players/pj2.tscn")
spawn_path = NodePath("..")

[node name="Map" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Map"]
position = Vector2(-485, 852)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/StaticBody2D"]
position = Vector2(582.5, 0)
shape = SubResource("RectangleShape2D_v1k1n")

[node name="TileMapLayer" type="TileMapLayer" parent="Map"]
position = Vector2(-7, 857)
tile_set = SubResource("TileSet_talil")
script = ExtResource("4_f7e7l")

[connection signal="pressed" from="Menues/Menu_Principal/CenterContainer/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menues/Menu_Principal/CenterContainer/VBoxContainer/Multijugador" to="Menues" method="_on_multijugador_pressed"]
[connection signal="pressed" from="Menues/Menu_Principal/CenterContainer/VBoxContainer/Salir" to="Menues" method="_on_salir_pressed"]
[connection signal="pressed" from="Menues/Multijugador/back" to="Menues" method="_on_back_pressed"]
[connection signal="pressed" from="Menues/Multijugador/CenterContainer/VBoxContainer/join2" to="." method="_on_join_pressed"]
